# serializer version: 1
# name: test_parse_main_plus_fea_delta
  dict({
    'TspBdy0': dict({
      'current_temperature': '82.0',
      'entity_category': None,
      'is_on': False,
      'label': 'Pool',
      'target_temperature': '88.0',
      'temperature_unit': 'F',
      'type': 'TcxClimate',
    }),
    'TspBdy0_solar': dict({
      'current_value': 100.0,
      'entity_category': None,
      'label': 'Solar Heater Set Point',
      'max_value': 104,
      'min_value': 60,
      'step': 1.0,
      'type': 'TcxSolarSetPoint',
      'unit_of_measurement': '°F',
    }),
    'TspBdy0_water': dict({
      'current_value': 88.0,
      'entity_category': None,
      'label': 'Water Heater Set Point',
      'max_value': 104,
      'min_value': 60,
      'step': 1.0,
      'type': 'TcxWaterSetPoint',
      'unit_of_measurement': '°F',
    }),
    'air': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Air Temperature',
      'state_class': None,
      'type': 'TcxAirSensor',
      'unit_of_measurement': None,
      'value': '72',
      'value_translated': None,
    }),
    'aux0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Waterfall',
      'type': 'TcxAuxSwitch',
    }),
    'aux0_fp': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Freeze Protect',
      'type': 'TcxAuxFreezeProtectSwitch',
    }),
    'aux1': dict({
      'brightness_percentage': None,
      'effect': 'Cobalt Blue',
      'effect_list': list([
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America the Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'entity_category': None,
      'is_on': True,
      'label': 'Pool Light',
      'rgbw': None,
      'type': 'TcxAuxLight',
    }),
    'ecm0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Variable Speed Pump',
      'percentage': 69,
      'preset_mode': None,
      'preset_modes': list([
        'Low',
        'Med',
        'High',
      ]),
      'type': 'TcxVariableSpeedPump',
    }),
    'ecm0_frzSpd': dict({
      'current_value': 1200.0,
      'entity_category': None,
      'label': 'VSP Freeze Protect Speed',
      'max_value': 3450.0,
      'min_value': 1000.0,
      'step': 25,
      'type': 'TcxVspFreezeProtectSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'ecm0_maxSpd': dict({
      'current_value': 3450.0,
      'entity_category': None,
      'label': 'VSP Maximum Speed',
      'max_value': 3450,
      'min_value': 1000.0,
      'step': 25,
      'type': 'TcxVspMaxSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'ecm0_minSpd': dict({
      'current_value': 1000.0,
      'entity_category': None,
      'label': 'VSP Minimum Speed',
      'max_value': 3450.0,
      'min_value': 600,
      'step': 25,
      'type': 'TcxVspMinSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'ecm0_prmDur': dict({
      'current_value': 300.0,
      'entity_category': None,
      'label': 'VSP Priming Duration',
      'max_value': 300,
      'min_value': 0,
      'step': 60,
      'type': 'TcxVspPrimingDuration',
      'unit_of_measurement': 's',
    }),
    'ecm0_prmSpd': dict({
      'current_value': 3450.0,
      'entity_category': None,
      'label': 'VSP Priming Speed',
      'max_value': 3450.0,
      'min_value': 1000.0,
      'step': 25,
      'type': 'TcxVspPrimingSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'feaCircuit0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Spa Jets',
      'type': 'TcxFeatureCircuit',
    }),
    'feaCircuit1': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Spa Light',
      'type': 'TcxFeatureCircuit',
    }),
    'filt0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Filter Pump',
      'type': 'TcxFilterPump',
    }),
    'freezeSP': dict({
      'current_value': 34.0,
      'entity_category': None,
      'label': 'Freeze Protection Set Point',
      'max_value': 42,
      'min_value': 34,
      'step': 1.0,
      'type': 'TcxFreezeSetPoint',
      'unit_of_measurement': '°F',
    }),
    'lvh1': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Pool Heater',
      'state_class': None,
      'type': 'TcxHeaterStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': None,
    }),
    'lvh1_enable': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Pool Heater',
      'type': 'TcxHeaterEnableSwitch',
    }),
    'solar': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Solar Panel',
      'state_class': None,
      'type': 'TcxSolarSensor',
      'unit_of_measurement': None,
      'value': '105.0',
      'value_translated': None,
    }),
    'swc0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Salt Chlorinator',
      'type': 'TcxChlorinatorBoost',
    }),
    'water': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Pool Water',
      'state_class': None,
      'type': 'TcxWaterSensor',
      'unit_of_measurement': None,
      'value': '82.0',
      'value_translated': None,
    }),
  })
# ---
# name: test_parse_main_shadow
  dict({
    'TspBdy0': dict({
      'current_temperature': '82.0',
      'entity_category': None,
      'is_on': False,
      'label': 'Pool',
      'target_temperature': '88.0',
      'temperature_unit': 'F',
      'type': 'TcxClimate',
    }),
    'TspBdy0_solar': dict({
      'current_value': 100.0,
      'entity_category': None,
      'label': 'Solar Heater Set Point',
      'max_value': 104,
      'min_value': 60,
      'step': 1.0,
      'type': 'TcxSolarSetPoint',
      'unit_of_measurement': '°F',
    }),
    'TspBdy0_water': dict({
      'current_value': 88.0,
      'entity_category': None,
      'label': 'Water Heater Set Point',
      'max_value': 104,
      'min_value': 60,
      'step': 1.0,
      'type': 'TcxWaterSetPoint',
      'unit_of_measurement': '°F',
    }),
    'air': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Air Temperature',
      'state_class': None,
      'type': 'TcxAirSensor',
      'unit_of_measurement': None,
      'value': '72',
      'value_translated': None,
    }),
    'aux0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Waterfall',
      'type': 'TcxAuxSwitch',
    }),
    'aux0_fp': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Freeze Protect',
      'type': 'TcxAuxFreezeProtectSwitch',
    }),
    'aux1': dict({
      'brightness_percentage': None,
      'effect': 'Cobalt Blue',
      'effect_list': list([
        'Alpine White',
        'Sky Blue',
        'Cobalt Blue',
        'Caribbean Blue',
        'Spring Green',
        'Emerald Green',
        'Emerald Rose',
        'Magenta',
        'Violet',
        'Slow Color Splash',
        'Fast Color Splash',
        'America the Beautiful',
        'Fat Tuesday',
        'Disco Tech',
      ]),
      'entity_category': None,
      'is_on': True,
      'label': 'Pool Light',
      'rgbw': None,
      'type': 'TcxAuxLight',
    }),
    'ecm0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Variable Speed Pump',
      'percentage': 69,
      'preset_mode': None,
      'preset_modes': list([
        'Low',
        'Med',
        'High',
      ]),
      'type': 'TcxVariableSpeedPump',
    }),
    'ecm0_frzSpd': dict({
      'current_value': 1200.0,
      'entity_category': None,
      'label': 'VSP Freeze Protect Speed',
      'max_value': 3450.0,
      'min_value': 1000.0,
      'step': 25,
      'type': 'TcxVspFreezeProtectSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'ecm0_maxSpd': dict({
      'current_value': 3450.0,
      'entity_category': None,
      'label': 'VSP Maximum Speed',
      'max_value': 3450,
      'min_value': 1000.0,
      'step': 25,
      'type': 'TcxVspMaxSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'ecm0_minSpd': dict({
      'current_value': 1000.0,
      'entity_category': None,
      'label': 'VSP Minimum Speed',
      'max_value': 3450.0,
      'min_value': 600,
      'step': 25,
      'type': 'TcxVspMinSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'ecm0_prmDur': dict({
      'current_value': 300.0,
      'entity_category': None,
      'label': 'VSP Priming Duration',
      'max_value': 300,
      'min_value': 0,
      'step': 60,
      'type': 'TcxVspPrimingDuration',
      'unit_of_measurement': 's',
    }),
    'ecm0_prmSpd': dict({
      'current_value': 3450.0,
      'entity_category': None,
      'label': 'VSP Priming Speed',
      'max_value': 3450.0,
      'min_value': 1000.0,
      'step': 25,
      'type': 'TcxVspPrimingSpeed',
      'unit_of_measurement': 'rpm',
    }),
    'filt0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Filter Pump',
      'type': 'TcxFilterPump',
    }),
    'freezeSP': dict({
      'current_value': 34.0,
      'entity_category': None,
      'label': 'Freeze Protection Set Point',
      'max_value': 42,
      'min_value': 34,
      'step': 1.0,
      'type': 'TcxFreezeSetPoint',
      'unit_of_measurement': '°F',
    }),
    'lvh1': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Pool Heater',
      'state_class': None,
      'type': 'TcxHeaterStatusSensor',
      'unit_of_measurement': None,
      'value': 'off',
      'value_translated': None,
    }),
    'lvh1_enable': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Pool Heater',
      'type': 'TcxHeaterEnableSwitch',
    }),
    'solar': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Solar Panel',
      'state_class': None,
      'type': 'TcxSolarSensor',
      'unit_of_measurement': None,
      'value': '105.0',
      'value_translated': None,
    }),
    'swc0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Salt Chlorinator',
      'type': 'TcxChlorinatorBoost',
    }),
    'water': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Pool Water',
      'state_class': None,
      'type': 'TcxWaterSensor',
      'unit_of_measurement': None,
      'value': '82.0',
      'value_translated': None,
    }),
  })
# ---
